# domla-archive-system

./: CMakeLists.txt  Doxyfile  README.md
src/archc/: backup.cxx  backup.hxx  command.cxx  command.hxx  commands.cxx  commands.hxx  main.cxx  rebuild.cxx  rebuild.hxx  restore.cxx  restore.hxx
src/archs/: main.cxx
src/archs/backend/: binary_data.cxx  binary_data.hxx  data_bucket.cxx  data_bucket.hxx  document_schema.cxx  document_schema.hxx  document_storage.cxx  document_storage.hxx  full_text.cxx  full_text.hxx  settings_provider.cxx  settings_provider.hxx  sqlite.cxx  sqlite.hxx  transformer.cxx  transformer.hxx  virtual_tree.cxx  virtual_tree.hxx
src/archs/backend/bzip2-1.0.5/: bzlib.c
src/lib/: utils.cxx  utils.hxx
src/lib/Ice/: Administrator.ice  Archive.ice  Authentication.ice  Common.ice
src/tests/: document_schema.cc  document_storage.cc  full_text.cc  reverse_delta.cc  sqlite.cc  transformer.cc  utils.cc  virtual_folder.cc
